--- a/Stepcount/app/src/main/res/layout/fragment_step.xml
+++ b/Stepcount/app/src/main/res/layout/fragment_step.xml
@@ -4,61 +4,161 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:weightSum="1">
 
     <!---steps-->
-    <TextView
-        android:textColor="@android:color/black"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Step count since reboot"
-        android:layout_gravity="center_horizontal" />
-    <TextView
-        android:id="@+id/tCount"
-        android:textSize="36dp"
-        android:textColor="@android:color/black"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"/>
-    <TextView
-        android:textColor="@android:color/black"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Daily Count" />
-    <TextView
-        android:id="@+id/dCount"
-        android:textSize="36dp"
-        android:textColor="@android:color/black"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"/>
 
-    <!--km stuff-->
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Score:"
+            android:id="@+id/textView3"
+            android:layout_gravity="center_horizontal"
+            android:textSize="50sp"
+            android:layout_marginBottom="5dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="0"
+            android:id="@+id/score"
+            android:layout_gravity="center_horizontal"
+            android:password="false"
+            android:textSize="40sp"
+            android:layout_marginBottom="10dp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"></RelativeLayout>
+    </LinearLayout>
+
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:weightSum="1">
 
-        <TextView
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Km:"
-            android:id="@+id/textView"
-            android:textAlignment="textEnd"
-            android:paddingLeft="0dp"
-            android:layout_weight="0.09" />
+            android:layout_height="wrap_content">
 
-        <TextView
+            <TextView
+                android:textColor="@android:color/black"
+                android:layout_width="171dp"
+                android:layout_height="wrap_content"
+                android:text="Step count since reboot:"
+                android:textAlignment="textEnd"
+                android:textSize="20sp"
+                android:layout_alignParentEnd="false"
+                android:layout_alignParentStart="false"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="200dp"
+                android:layout_centerVertical="true" />
+
+            <TextView
+                android:id="@+id/tCount"
+                android:textSize="36dp"
+                android:textColor="@android:color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:paddingLeft="20dp"
+                android:layout_gravity="center_vertical"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="160dp"
+                android:layout_centerVertical="true" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:textColor="@android:color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Daily Count:"
+                android:textAlignment="textEnd"
+                android:textSize="20sp"
+                android:layout_marginRight="200dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true" />
+
+            <TextView
+                android:id="@+id/dCount"
+                android:textSize="36dp"
+                android:textColor="@android:color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:paddingLeft="20dp"
+                android:layout_alignParentEnd="false"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="160dp"
+                android:layout_centerVertical="true" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <!--km stuff-->
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:weightSum="1"
+        android:textAlignment="center">
+
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/kiloms"
-            android:layout_weight="0.20"
-            android:textAlignment="center"
-            android:layout_gravity="right" />
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Km:"
+                android:id="@+id/textView"
+                android:textAlignment="textEnd"
+                android:layout_weight="0.46"
+                android:layout_marginRight="200dp"
+                android:layout_alignParentStart="false"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:textSize="20sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/kiloms"
+                android:textAlignment="center"
+                android:paddingLeft="20dp"
+                android:textSize="36dp"
+                android:layout_alignParentEnd="false"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="160dp"
+                android:layout_centerVertical="true" />
+        </RelativeLayout>
 
     </LinearLayout>
 
@@ -70,22 +170,35 @@
         android:layout_gravity="center_horizontal"
         android:weightSum="1">
 
-        <TextView
-            android:layout_width="105dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Calories:"
-            android:id="@+id/textView2"
-            android:textAlignment="center"
-            android:layout_gravity="left" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/calories"
-            android:layout_gravity="right"
-            android:paddingLeft="30dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/calories"
+                android:paddingLeft="20dp"
+                android:textSize="36dp"
+                android:layout_marginLeft="160dp"
+                android:layout_alignTop="@+id/textView2" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Calories Burned:"
+                android:id="@+id/textView2"
+                android:textAlignment="textEnd"
+                android:layout_gravity="left"
+                android:layout_weight="0.04"
+                android:layout_marginRight="200dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="false"
+                android:layout_alignParentEnd="true"
+                android:textSize="20sp" />
+        </RelativeLayout>
 
     </LinearLayout>
 
